feat: implement user-activation feature
