# cmd/api/auth.go
@@ -1,6 +1,11 @@
 package main
 import (
 	"net/http"
+	"crypto/sha256"
+	"encoding/hex"
+	"github.com/google/uuid"
+
+	"github.com/Prasanthi-Peram/pigee-connect/internal/store"
 )
 
 type RegisterUserPayload struct {
@@ -10,6 +15,23 @@ type RegisterUserPayload struct {
 }
 
 
+type UserWithToken struct {
+	*store.User
+	Token string `json:"token"`
+}
+
+// registerUserHandler godoc
+//
+//	@Summary		Registers a user
+//	@Description	Registers a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		RegisterUserPayload	true	"User credentials"
+//	@Success		201		{object}	UserWithToken		"User registered"
+//	@Failure		400		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/authentication/user [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request){
 	var payload RegisterUserPayload
 	if err := readJSON(w, r, &payload); err != nil {
@@ -53,9 +75,14 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
+	userWithToken := UserWithToken{
+		User:  user,
+		Token: plainToken,
+	}
+
 	//mail
 
-	if err:= app.jsonResponse(w, http.StatusCreated,nil); err!=nil{
+	if err:= app.jsonResponse(w, http.StatusCreated,userWithToken); err!=nil{
 		app.internalServerError(w,r,err)
 	}
 }
